--- a/release/fv/fv_smalgyax/source/welcome/welcome.htm
+++ b/release/fv/fv_smalgyax/source/welcome/welcome.htm
@@ -27,13 +27,16 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 						<li>All accents are typed after the base character: a̱ is typed a then Semicolon ;</li>
 						<li>To type the underline accent use the Semicolon key ; — ḵ is typed k then Semicolon ;</li>
 						<li>All changed punctuation can type their original value by holding down the Right-Alt or Option key. The Semicolon ; is typed Right-Alt+Semicolon (Windows) Option+Semicolon (Mac).</li>
+              <ul>
+                  <li>NOTE: When using Google Docs, / is typed Shift+Right-alt+Slash / (Windows) or Shift+Option+Slash / (Mac)</li>
+              </ul>
 						<li>Opening and closing quotes. For Mac users, Right-Alt is either of the Option Keys.</li>
 						<ul>
 									<li>single: ‘ Backquote — ’ Apostrophe</li>
 									<li>double: “ Shift+Hyphen — ” Shift+Equals</li>
 									<li>single ‹ Right-Alt+Shift+9 — › Right-Alt+Shift+0</li>
 									<li>double « Right-Alt+9 — » Right-Alt+0</li>
-								</ul>
+						</ul>
 						<h2>Unicode Fonts</h2>
 						<p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
     <h3><a href="http://www.languagegeek.com/font/fontdownload.html">Download the latest version of Aboriginal Sans and Aboriginal Serif</a></h3>
