--- a/release/fv/fv_cree_latin/source/welcome/welcome.htm
+++ b/release/fv/fv_cree_latin/source/welcome/welcome.htm
@@ -25,13 +25,15 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
     <h2>Keyboard Layout </h2>
     
     <ul>
-						<li>To type the acute accent use the Left-Bracket key [ — á is typed a then Left Bracket [</li>
-						<li>To type the circumflex accent use the Right-Bracket key ] — ê is typed a then Right-Bracket ]</li>
-						<li>To type the macron accent use the Backslash Key \ — ō is typed o then Backslash \ </li>
-            <li>To type the caron/hachek accent use the 1 key — š is typed s then 1</li>
-						<li>You can type the original English punctuation by holding down the Right-Alt or Option key. The Semicolon ; is typed Right-Alt+Semicolon (Windows) Option+Semicolon (Mac).</li>
-					</ul>
-    </ul>
+			<li>To type the acute accent use the Left-Bracket key [ — á is typed a then Left Bracket [</li>
+			<li>To type the circumflex accent use the Right-Bracket key ] — ê is typed a then Right-Bracket ]</li>
+			<li>To type the macron accent use the Backslash Key \ — ō is typed o then Backslash \ </li>
+      <li>To type the caron/hachek accent use the 1 key — š is typed s then 1</li>
+			<li>You can type the original English punctuation by holding down the Right-Alt or Option key — the Semicolon ; is typed Right-Alt+Semicolon (Windows) Option+Semicolon (Mac).</li>
+		</ul>
+    <h2>Unicode Fonts</h2>
+	<p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
+  <h3><a href="http://www.languagegeek.com/font/fontdownload.html">Download the latest version of Aboriginal Sans and Aboriginal Serif</a></h3>
   </tr>
   <tr>
     <td style="padding: 15px" valign="middle"><a href="https://keyman.com/"><img src="keyman.png" height="31"  border="0"/></a></td>
