--- a/experimental/n/naijatype/source/naijatype-help.htm
+++ b/experimental/n/naijatype/source/naijatype-help.htm
@@ -12,7 +12,7 @@
 <li> Flick DOWN on b, d, k for the hooked version.</li>
 <li>Flick UP on the vowels to get their most common alternate shape.</li>
 <li>Flick LEFT and RIGHT on the space bar to get underscore and hyphen. UP to get a non-breaking space.</li>
-<li>Double-tap vowels to get the underdot version.</li></ul></li>
+<li>Triple-tap vowels to get the underdot version, or type a vowel and then double-tap full stop to get an underdot.</li></ul></li>
 <li>
 <b>On a computer with physical keyboard</b>
 <ul><li>Press a key like the letter you want then use the semicolon to change its shape. <br/>eg <b>a ; → ə </b> <br /><b> U ; → Ʉ </b><br /><b> U ; ; ; → U̱</b></li>
