--- a/release/fv/fv_hulquminum_combine/source/welcome/welcome.htm
+++ b/release/fv/fv_hulquminum_combine/source/welcome/welcome.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Hul̓q̓umin̓um̓’ Keyboard</title>
+  <title>Hul̓q̓umin̓um̓ Keyboard</title>
 
 <style type="text/css"> <!--
 li {font-size: medium; margin-bottom: 5px; font-family: "Aboriginal Sans"; }
@@ -37,9 +37,10 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 						
 
 				<h2>Unicode Fonts</h2>
-				<p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
-        <h3><a href="http://www.languagegeek.com/font/fontdownload.html">Download the latest version of Aboriginal Sans and Aboriginal Serif</a></h3>
-    <hr></td>
+				  <p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
+          <h3><a href="http://www.languagegeek.com/font/fontdownload.html">Download the latest version of Aboriginal Sans and Aboriginal Serif</a></h3>
+      <hr>
+    </td>
   </tr>
   <tr>
     <td style="padding: 15px" valign="middle"><a href="https://keyman.com/"><img src="keyman.png" height="31"  border="0"/></a></td>
