--- a/release/fv/fv_ojibwa_ifinal_rdot/source/welcome/welcome.htm
+++ b/release/fv/fv_ojibwa_ifinal_rdot/source/welcome/welcome.htm
@@ -85,8 +85,9 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 	</ul>
 
 	<h2>Unicode Fonts</h2>
-		<p>The following fonts have been installed on your computer: <strong>Aboriginal Serif.</strong> Please use this font when typing in your language as it has been specially built to represent your language as accurately as possible. </p>
+		<p>The following fonts have been installed on your computer: <strong>Aboriginal Serif, BC Sans.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
     	<h3><a href="http://www.languagegeek.com/font/fontdownload.html">Download the latest version of Aboriginal Serif</a></h3>
+		<h3><a href="https://www2.gov.bc.ca/gov/content/governments/services-for-government/policies-procedures/bc-visual-identity/bc-sans">Download the latest version of BC Sans</a></h3>
     	<hr>
 	</td>
   </tr>
