--- a/release/fv/fv_tagizi_dene/source/welcome/welcome.htm
+++ b/release/fv/fv_tagizi_dene/source/welcome/welcome.htm
@@ -1,70 +1,128 @@
-﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-
-<html>
+﻿<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>Tāgizi Dene Keyboard</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta content="keyman" name="keywords">
+  <meta charset="utf-8">
+  <title>Sƛ̓áƛ̓imxec</title>
+
+<style type="text/css"> <!--
+li {font-size: medium; margin-bottom: 5px; font-family: "Aboriginal Sans"; }
+p {font-family: "Aboriginal Sans"; }
+h2 {font-family: "Aboriginal Sans"; }
+.legalese { font-size: x-small; }
+h3 {font-family: "Aboriginal Sans";}
+a:link {color: #0000ee; text-decoration:none;}
+a:visited {	color: rgb(0,150,0); text-decoration:none;} 
+a:active {	color: rgb(102,117,184); text-decoration:none;}
+ --> </style>
+
 </head>
 
-<body style=
-"PADDING-RIGHT: 25px; PADDING-LEFT: 25px; PADDING-BOTTOM: 25px; MARGIN: 0px; PADDING-TOP: 25px; max-width:600px">
-<div style="font-size: 85%;">
-	
-<h1>Tāgizi Dene Keyboard</h1>
-
-<p style='margin: 16px 0 0 0'>
-This keyboard is designed for the <b>Tāgizi Dene</b> language of the Western Subarctic region of Canada. This is part of a set of keyboards from FirstVoices.
-</p>
+<body>
+<table width="100%" border="0" cellpadding="0">
+	<tr>
+    <td colspan="2"><a href="http://www.firstvoices.com"><img src="FVLogo.gif" width="200" height="48" border="0" /></a>
 
 <div id='fv_tagizi_dene_help'>
 <ul>
-<li>To type the diaeresis accent use the Semicolon key ;. ä is typed Semicolon then a.</li>
-<li>To type the acute accent use the / key. á is typed / then a.</li>
-<li>To type the double acute accent use the & key. a̋ is typed & then a.</li>
-<li>To type the grave accent use the ` key. à is typed ` then a.</li>
-<li>To type the caron accent use the % key. ǎ̀ is typed % then a.</li>
-<li>To type the circumflex accent use the ^ key. â is typed ^ then a.</li>
-<li>To type the macron accent use the = key. ā is typed = then a.</li>
-<li>To type the tilde accent use the ~ key. ã is typed ~ then a.</li>
-<li>To type the breve accent use the + and ( key. ă is typed + then ( then a.</li>
-<li>To type the ogonek accent use the , key. ą is typed , then a.</li>
-<li>To type the dot below accent use the . key. ạ is typed . then a.</li>
-<li>To type the ring below accent use the + and ) key. ḁ is typed + then ) then a.</li>
-<li>Type '+' plus "O" to get "Œ"</li>
-<li>Type '+' plus "o" to get "œ" </li>
-<li>Type '+' plus "9" to get "ǝ" </li>
-<li>Type '+' plus "3" to get "ɛ" </li>
-<li>Type '+' plus "?" to get "ʔ" </li>                                         
-<li>Type '+' plus "r" to get "ρ" </li>
-<li>Type '+' plus "x" to get "χ" </li>
+  <li>The special characters used to write Tāgizi Dene are typed using a combination of punctuation followed by a vowel.</li>
+    <li>Single Accents
+        <ul>
+            <li>To type the diaeresis accent use the Semicolon key ; — ÿ is typed ; then y.</li>
+            <li>To type the grave accent use the Backquote key ` — à is typed ` then a.</li>
+            <li>To type the caron accent use the Percent sign % — ǎ is typed % then a.</li>
+            <li>To type the circumflex accent use the Caret sign ^ — â is typed ^ then a.</li>
+            <li>To type the macron accent use the Equal sign = — ā is typed = then a.</li>
+            <li>To type the ogonek accent use the Comma , — ą is typed , then a.</li>
+        </ul>
+    </li>
+    <li>Double Accents
+      <br>Double accents are typed by using both corresponding punctuation marks of the accents you wish to combine followed by a vowel.</br>
+        <ul>
+            <li>To type the macron and grave accents use the Equal sign and Backquote key — ā̀ is typed =` or `= then a.</li>
+            <li>To type the circumflex and ogonek accents use the Caret sign and Comma key — ą̂ is typed ,^ or ^, then a.</li>
+        </ul>
+    </li>
+    <li>Triple Acccents
+      <br>Triple accents are typed by using the three correspinding punctuation marks of the accents you wish to combine followed by a vowel.</br>
+        <ul>
+            <li>To type the grave, macron, and ogonek accents use the Comma key, Backquote key, and Comma in any order — ą̄̀ is typed ,`= then a.</li>
+        </ul>
+    </li>
+    <li>The Quote key ' has been modified to type the curled apostrophe ʼ. 
+      <br>To type the regular Quote ', type Right-Alt+Quote (Windows) or Option+Quote (Mac)</br>
+    </li>
 </ul>
-</div>
-
-<h2>Layout</h2>
-
-    <h3>Default (Unshifted)</h3>
-    <p><img src="fv_tagizi_deneU_.png" alt="Southern Tutchone Keyboard: default (unshifted)"></p>
-    <h3>Shift</h3>
-    <p><img src="fv_tagizi_deneU_S.png" alt="Southern Tutchone Keyboard: shift"></p>
-    <h3>RALT</h3>
-    <p><img src="fv_tagizi_deneU_A.png" alt="Southern Tutchone Keyboard: ralt"></p>
-
+<h2>Unicode Fonts</h2>
+		<p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
+    <h3><a href="http://www.languagegeek.com/font/fontdownload.html">Download the latest version of Aboriginal Sans and Aboriginal Serif</a></h3>
 
 
 <h2>Notes on touch layout</h2>
 <div id='wikitext'>
 <div class='vspace'></div>
-<table border='1' style='border-collapse:collapse' cellpadding='5' ><tr ><th  align='center'>`</th><td  align='center'>w</td><td  align='center'>e</td><th  align='center'>ˇ</th><td  align='center'>t</td><td  align='center'>y ÿ</td><td  align='center'>u</td><td  align='center'>i</td><td  align='center'>o</td><td  align='center'>ł</td></tr>
-<tr ><td  align='center'>a</td><td  align='center'>s</td><td  align='center'>d</td><th  align='center'>˛</th><td  align='center'>g</td><td  align='center'>h</td><td  align='center'>j</td><td  align='center'>k</td><td  align='center'>l</td><td  align='center'>' "</td></tr>
-<tr ><td >&nbsp;</td><td  align='center'>z</td><th  align='center'>¯</th><td  align='center'>c</td><th  align='center'>¯̀</th><th  align='center'>^</th><td  align='center'>n</td><td  align='center'>m</td><td  colspan='2'>&nbsp;</td></tr>
+<table border='1' style='border-collapse:collapse' cellpadding='5' >
+  <tr >
+    <th  align='center'>`</th>
+    <td  align='center'>w</td>
+    <td  align='center'>e</td>
+    <th  align='center'>ˇ</th>
+    <td  align='center'>t</td>
+    <td  align='center'>y ÿ</td>
+    <td  align='center'>u</td>
+    <td  align='center'>i</td>
+    <td  align='center'>o</td>
+    <td  align='center'>ł</td>
+  </tr>
+  <tr >
+    <td  align='center'>a</td>
+    <td  align='center'>s</td>
+    <td  align='center'>d</td>
+    <th  align='center'>˛</th>
+    <td  align='center'>g</td>
+    <td  align='center'>h</td>
+    <td  align='center'>j</td>
+    <td  align='center'>k</td>
+    <td  align='center'>l</td>
+    <td  align='center'>ʼ</td>
+  </tr>
+  <tr >
+    <td  align='center'>⇧</td>
+    <td  align='center'>z</td>
+    <th  align='center'>¯</th>
+    <td  align='center'>c</td>
+    <th  align='center'>-̀</th>
+    <th  align='center'>^</th>
+    <td  align='center'>n</td>
+    <td  align='center'>m</td>
+    <td  align='center' colspan="2">⌫</td>
+  </tr>
+  <tr>
+    <td  align='center'>123</td>
+    <td  align='center'>🌐</td>
+    <td  align='center' colspan='5'>space</td>
+    <td  align='center'>.</td>
+    <td  align='center' colspan="2">⏎</td>
+</tr>
 </table>
-<div class='vspace'></div><ul><li>the first character in a cell is the "one-tap" key, any further characters are "hold-select" keys.
-</li></ul>
+<div class='vspace'></div>
+<ul>
+  <li>Keys with a red background are combining accents. On your mobile device, these keys will have green text.</li>
+  <li>The first character in a cell is the "one-tap" key, any further characters are "hold-select" keys.</li>
+  <li>Common punctuation marks can be found by pressing and holding the period key on the right side of the space bar.</li>
+</ul>
 </div>
+<hr>
+</td>
+</tr>
 
-
-<br/>
+<tr>
+    <td style="padding: 15px" valign="middle"><a href="https://keyman.com/"><img src="keyman.png" height="31"  border="0"/></a></td>
+    <td valign="middle"><a href="http://www.languagegeek.com"><img src="lgBlue162x31.png" width="162" height="31" border="0"/></a></td>
+  </tr>
+  <tr>
+    <td colspan="2"><p class="legalese">Development of this keyboard layout was funded by FirstVoices and the First Peoples’ Heritage Language and Culture Council. This keyboard is provided free of charge. </p></td>
+  </tr>
+</table>
 
 </body>
 </html>
