--- a/release/fv/fv_dakelh/source/welcome/welcome.htm
+++ b/release/fv/fv_dakelh/source/welcome/welcome.htm
@@ -27,13 +27,14 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 						<li>The underlined letters s̲, z̲, t̲s̲, and d̲z̲ each have their own key. To type the underline accent separately, use the Backquote key ` (left of the 1 key).</li>
 						<li>To type the acute accent use the Slash key / — á is typed a then Slash /</li>
 						<li>You can type the original English punctuation by holding down the Right-Alt or Option key. The Semicolon ; is typed Right-Alt+Semicolon (Windows) Option+Semicolon (Mac).</li>
-						<li>Opening and closing quotes. For Mac users, Right-Alt is either of the Option Keys.</li>
+						<li>Opening and closing quotes. For Mac users, Right-Alt is either of the Option Keys.
 						<ul>
 									<li>single: ‘ Shift+Backquote — ’ Apostrophe</li>
 									<li>double: “ Shift+Hyphen — ” Shift+Equals</li>
 									<li>single ‹ Right-Alt+Shift+9 — › Right-Alt+Shift+0</li>
 									<li>double « Right-Alt+9 — » Right-Alt+0</li>
 								</ul>
+              </li>
 						<h2>Unicode Fonts</h2>
 						<p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
     <h3><a href="http://www.languagegeek.com/font/fontdownload.html">Download the latest version of Aboriginal Sans and Aboriginal Serif</a></h3>
