--- a/release/fv/fv_dene_zhatie/source/welcome/welcome.htm
+++ b/release/fv/fv_dene_zhatie/source/welcome/welcome.htm
@@ -26,15 +26,22 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
     
     <ul>
       <li> The special characters of Dene Zhatıé have been assigned to a mix of both number and punctuation keys. </li>
-      <li> All accents are typed after the base character: ų is typed u then Left Bracket </li>
-      <li> To type the acute accent use the Backquote key ` — á is typed a then Backquote `</li>
-      <li> To type the ogonek accent use the the Left Bracket key — ų is typed u then Left Bracket</li>
-      <li> To type the acute and ogonek accent at the same time use the Right Bracket key ] — ǫ́ is typed o then Right Bracket ] </li>
-      <li> To type the underlined n ṉ use the Equal key. To type the capital underlined N Ṉ use the Plus key</li>
-      <li> To type the underlined double e e̲e̲ use Right-Alt (Windows) / Option (Mac) + the e key</li>
+        <ul>
+          <li> All accents are typed after the base character — ų is typed u then Left Bracket 
+          <li> To type the acute accent use the Backquote key ` — á is typed a then Backquote `</li>
+          <li> To type the ogonek accent use the the Left Bracket key — ų is typed u then Left Bracket</li>
+          <li> To type the acute and ogonek accent at the same time use the Right Bracket key ] — ǫ́ is typed o then Right Bracket ] </li>
+          <li> To type the underlined n ṉ use the Equal key. To type the capital underlined N Ṉ use the Plus key</li>
+          <li> To type the underlined double e e̲e̲ use Right-Alt (Windows) / Option (Mac) + the e key</li>
+        </ul>
+      </li>
       <li> All changed number and punctuation can type their original value by holding down the Right-Alt or Option key. The Semicolon ; is typed Right-Alt+Semicolon (Windows) Option+Semicolon (Mac).</li>
     </ul>
   
+<h2>Unicode Fonts</h2>
+		<p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
+    <h3><a href="http://www.languagegeek.com/font/fontdownload.html">Download the latest version of Aboriginal Sans and Aboriginal Serif</a></h3>
+
   <tr>
     <td style="padding: 15px" valign="middle"><a href="https://keyman.com/"><img src="keyman.png" height="31"  border="0"/></a></td>
   </tr>
