--- a/experimental/w/wenchow/source/welcome.htm
+++ b/experimental/w/wenchow/source/welcome.htm
@@ -2,21 +2,38 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Start Using Wenchow</title>
+  <title>Start Using wenchow</title>
   <style type="text/css">
-    p { font: 10pt Tahoma; }
+    p { font: 16pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
-    h2 { font: bold 12pt Tahoma; color: #4444cc; }
+    h2 { font: bold 16pt Tahoma; color: #4444cc; }
   </style>
 </head>
 <body>
 
-<h1>Start Using Wenchow</h1>
+<h1>Start Using wenchow開始使用溫州話羅馬字輸入法</h1>
 
 <p>
-    Wenchow for üe-tsiu-ó.
+    wenchow for üe-tsiu-‘ó.溫州話羅馬字
 </p>
-oo = ö, uu = û, ii = ï, ae= æ, uw= ü, mm = m̌, nn = ň, ll = l̆, ňg = ngg, aq = á, ax = à. 
+<p> typing specific letters by doubletapping and combination 雙擊和字母組合輸入特殊字母</p>
+<p> examples: oo > ö, uu > û, ii > ï, ae > æ, uw > ü, mm > m̌, nn > ň, ll > l̆, ňg > ngg </p>
+<p> adding aspiration marks "‘" by adding h after consonants 在輔音後輸入h字母，添加送氣音符號"‘"</p>
+<p> examples: ph > p‘, th > t‘, kh > k‘, tsh > ts‘, chh > ch‘, kwh > kw‘, hh > ‘ </p>
+<p> doubletapping h, to generating voiced sound h "‘", 雙擊h，產生濁音h "‘"</p>
+<p> examples: hh > ‘ </p>
+<p> typing tone marks by adding "q" and "x" 通過添加字母q和x輸入音調符號 </p>
+<p> examples: aq > á, ax > à. </p>
+<p> cancelling letter tranformation and tone marks by typing the tranformation key again</p>
+<p> 再次點擊轉化鍵，取消字母轉化和音調符號 </p>
+<p> examples: aqq > aq, axx > ax, ooo > oo. </p>
+<!-- <p>See <a href="file:taigi_poj.pdf">this document</a> for all the key combinations.</p> -->
+<h1>phonology of wenchownese溫州話音韻表</h1>
+
+<p><b>consonant輔音</b></p>
+<img src='consonant.png' alt='phonology'>
+<p><b>vowel元音</b></p>
+<img src='vowel.png' alt='phonology'>
 
 <h1>Keyboard Layout</h1>
 
@@ -29,7 +46,7 @@ oo = ö, uu = û, ii = ï, ae= æ, uw= ü, mm = m̌, nn = ň, ll = l̆, ňg =
 
 
 
-<p>© cathaylab</p>
+<p>© 2024 cathaylab</p>
 
 </body>
 </html>
