--- a/release/fv/fv_statimcets/source/welcome/welcome.htm
+++ b/release/fv/fv_statimcets/source/welcome/welcome.htm
@@ -1,59 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>St̓át̓imcets</title>
 
-<style type="text/css"> <!--
-li {font-size: medium; margin-bottom: 5px; font-family: "Aboriginal Sans"; }
-p {font-family: "Aboriginal Sans"; }
-h2 {font-family: "Aboriginal Sans"; }
-.legalese { font-size: x-small; }
-h3 {font-family: "Aboriginal Sans";}
-a:link {color: #0000ee; text-decoration:none;}
-a:visited {	color: rgb(0,150,0); text-decoration:none;} 
-a:active {	color: rgb(102,117,184); text-decoration:none;}
- --> </style>
+<head>
+	<meta charset="utf-8">
+	<title>St̓át̓imcets</title>
+
+	<style type="text/css">
+		<!--
+		li {
+			font-size: medium;
+			margin-bottom: 5px;
+			font-family: "Aboriginal Sans";
+		}
+
+		p {
+			font-family: "Aboriginal Sans";
+		}
+
+		h2 {
+			font-family: "Aboriginal Sans";
+		}
+
+		.legalese {
+			font-size: x-small;
+		}
+
+		h3 {
+			font-family: "Aboriginal Sans";
+		}
+
+		a:link {
+			color: #0000ee;
+			text-decoration: none;
+		}
+
+		a:visited {
+			color: rgb(0, 150, 0);
+			text-decoration: none;
+		}
+
+		a:active {
+			color: rgb(102, 117, 184);
+			text-decoration: none;
+		}
+
+		kbd {
+			border-radius: 2px;
+			padding: 2px;
+			border: 1px solid black;
+		}
+		-->
+	</style>
 
 </head>
 
 <body>
-<table width="100%" border="0" cellpadding="0">
-  <tr>
-    <td colspan="2"><a href="http://www.firstvoices.com"><img src="FVLogo.gif" width="200" height="48" border="0" /></a>
-     
-    <h2><img src="Statimcets.png" alt="" height="182" width="514" border="0" /></h2>
-					<ul>
-						<li>All accents are typed after the base character: é is typed e then Semicolon ;</li>
-						<li>To type the acute accent use the Semicolon key ; — á is typed a then Semicolon ;</li>
-						<li>To type the apostrophe accent use the Apostrophe key ' — k̓ is typed k then Apostrophe '</li>
-						<li>You can type the original English punctuation marks by holding down the Right-Alt or Option key. The Slash / is typed Right-Alt+Slash (Windows) Option+Slash (Mac).</li>
-							<ul>
-								<li>NOTE: When using Google Docs, / is typed Shift+Right-Alt+/</li>
-							</ul>
-						<li>Opening and closing quotes. For Mac users, Right-Alt is either of the Option Keys.
-							<ul>
-								<li>single: ‘ Right-Alt+7 — ’ Right-Alt+8</li>
-								<li>double: “ Shift+Hyphen — ” Shift+Equals</li>
-								<li>single ‹ Right-Alt+Shift+9 — › Right-Alt+Shift+0</li>
-								<li>double « Right-Alt+9 — » Right-Alt+0</li>
-							</ul>
-						</li>
-					</ul>
-						 
-						<h2>Unicode Fonts</h2>
-						<p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
-    <h3><a href="http://www.languagegeek.com/font/fontdownload.html">Download the latest version of Aboriginal Sans and Aboriginal Serif</a></h3>
-    <hr></td>
-  </tr>
-  <tr>
-    <td style="padding: 15px" valign="middle"><a href="https://keyman.com/"><img src="keyman.png" height="31"  border="0"/></a></td>
-    <td valign="middle"><a href="http://www.languagegeek.com"><img src="lgBlue162x31.png" width="162" height="31" border="0"/></a></td>
-  </tr>
-  <tr>
-    <td colspan="2"><p class="legalese">Development of this keyboard layout was funded by FirstVoices and the First Peoples’ Heritage Language and Culture Council. This keyboard is provided free of charge. </p></td>
-  </tr>
-</table>
+	<table width="100%" border="0" cellpadding="0">
+		<tr>
+			<td colspan="2"><a href="http://www.firstvoices.com"><img src="FVLogo.gif" width="200" height="48"
+						border="0" /></a>
+
+				<h2><img src="Statimcets.png" alt="" height="182" width="514" border="0" /></h2>
+				<ul>
+					<li>All accents are typed after the base character — é is typed <kbd>e</kbd> then Semicolon
+						<kbd>;</kbd>
+						<ul>
+							<li>To type the acute accent use the Semicolon key <kbd>;</kbd> — á is typed <kbd>a</kbd>
+								then <kbd>;</kbd></li>
+							<li>To type the apostrophe accent use the Apostrophe key <kbd>'</kbd> — k̓ is typed
+								<kbd>k</kbd> then <kbd>'</kbd></li>
+						</ul>
+					</li>
+					<li>You can type the original English punctuation marks by holding down the Right-Alt or Option key.
+						The Slash / is typed <kbd>Right-Alt</kbd>+<kbd>/</kbd> (Windows) / <kbd>⌥
+							Option</kbd>+<kbd>/</kbd> (Mac).
+						<ul>
+							<li>NOTE: When using Google Docs, / is typed
+								<kbd>Shift</kbd>+<kbd>Right-Alt</kbd>+<kbd>/</kbd> (Windows) / <kbd>Shift</kbd>+<kbd>⌥
+									Option</kbd>+<kbd>/</kbd> (Mac)</li>
+						</ul>
+					</li>
+					<li>Opening and closing quotes. For Mac users, Right-Alt is either of the Option Keys.
+						<ul>
+							<li>single: ‘ <kbd>Right-Alt</kbd>+<kbd>7</kbd> — ’ <kbd>Right-Alt</kbd>+<kbd>8</kbd></li>
+							<li>double: “ <kbd>Shift</kbd>+<kbd>-</kbd> — ” <kbd>Shift</kbd>+<kbd>=</kbd></li>
+							<li>single: ‹ <kbd>Right-Alt</kbd>+<kbd>Shift</kbd>+<kbd>9</kbd> — ›
+								<kbd>Right-Alt</kbd>+<kbd>Shift</kbd>+<kbd>0</kbd></li>
+							<li>double: « <kbd>Right-Alt</kbd>+<kbd>9</kbd> — » <kbd>Right-Alt</kbd>+<kbd>0</kbd></li>
+						</ul>
+					</li>
+				</ul>
+
+				<h2>Unicode Fonts</h2>
+				<p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal
+						Serif.</strong> Please use these fonts when typing in your language as they have been specially
+					built to represent your language as accurately as possible. </p>
+				<h3><a href="http://www.languagegeek.com/font/fontdownload.html">Download the latest version of
+						Aboriginal Sans and Aboriginal Serif</a></h3>
+				<hr>
+			</td>
+		</tr>
+		<tr>
+			<td style="padding: 15px" valign="middle"><a href="https://keyman.com/"><img src="keyman.png" height="31"
+						border="0" /></a></td>
+			<td valign="middle"><a href="http://www.languagegeek.com"><img src="lgBlue162x31.png" width="162"
+						height="31" border="0" /></a></td>
+		</tr>
+		<tr>
+			<td colspan="2">
+				<p class="legalese">Development of this keyboard layout was funded by FirstVoices and the First Peoples’
+					Heritage Language and Culture Council. This keyboard is provided free of charge. </p>
+			</td>
+		</tr>
+	</table>
 
 </body>
+
 </html>
