--- a/release/fv/fv_dane_zaa_zaage/source/welcome.htm
+++ b/release/fv/fv_dane_zaa_zaage/source/welcome.htm
@@ -8,6 +8,11 @@
     p { font: 10pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
     h2 { font: bold 12pt Tahoma; color: #4444cc; }
+    kbd {
+  border-radius: 2px;
+  padding: 2px;
+  border: 1px solid black;
+}
   </style>
 </head>
 <body>
@@ -20,15 +25,15 @@
 <h2>Desktop Layout</h2>
 <img src="fv_dane_zaa_zaage_D.png">
 
-<p>Combining accents are located on the standard <strong>/ and \</strong> keys. Type an accent after a vowel to add it on the vowel. If you've typed the wrong accent, just type the correct accent to replace it.</p>
+<p>Combining accents are located on the standard <strong>/</strong> and <strong>\</strong> keys. Type an accent after a vowel to add it on the vowel. If you've typed the wrong accent, just type the correct accent to replace it.</p>
 <ul>
-  <li>á = a then /</li>
-  <li>ǎ = a then \</li>
-  <li>â = a then Shift-\</li>
+  <li>á = <kbd>a</kbd> then <kbd>/</kbd></li>
+  <li>ǎ = <kbd>a</kbd> then <kbd>\</kbd></li>
+  <li>â = <kbd>a</kbd> then <kbd>Shift</kbd>+<kbd>\</kbd></li>
 </ul>
 
 <p>By holding the ALT key, you can return to the standard US English keyboard value of any modified key (such as <strong>p, r, q, v, x</strong>, and various punctuation). Shift-Alt will give you the standard English shifted value of the modified key (such as <strong>P, R, Q, V, Z</strong>, etc).</p>
-<p>NOTE: When using Google Docs, / is typed Right-Alt+Shift+/ (Windows) or ⌥ Option+Shift_/.</p>
+<p>NOTE: When using Google Docs, / is typed <kbd>Right-Alt</kbd>+<kbd>Shift</kbd>+<kbd>/</kbd> (Windows) or <kbd>⌥ Option</kbd>+<kbd>Shift</kbd>+<kbd>/</kbd> (Mac).</p>
 
 <h2>Unicode Fonts</h2>
 	<p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
