--- a/release/fv/fv_nexwslayemucen/source/welcome/welcome.htm
+++ b/release/fv/fv_nexwslayemucen/source/welcome/welcome.htm
@@ -42,12 +42,12 @@ kbd {
 			<li>To type "fruit", type <kbd>Right-Alt</kbd>+<kbd>f</kbd> <kbd>Right-Alt</kbd>+<kbd>r</kbd> <kbd>u</kbd> <kbd>Right-Alt</kbd>+<kbd>i</kbd> <kbd>t</kbd> </li>
 		</ul>
 	</li>
-	<li>To type the glottal accent, type the base character first, followed by the <kbd>d</kbd> key (with no space in between).
+	<li>To type the glottal accent, type the base character first, followed by the <kbd>d</kbd> key (no space in between).
 		<ul>
 			<li>q̕ is typed <kbd>q</kbd> then <kbd>d</kbd></li>
 		</ul>
 	</li>	
-	<li>To type acccented vowels, type the Semicolon key <kbd>;</kbd> first, followed by the base vowel (with no space in between).
+	<li>To type acccented vowels, type the Semicolon key <kbd>;</kbd> first, followed by the base vowel (no space in between).
 		<ul>
 			<li><kbd>;</kbd> <kbd>a</kbd> types á</li>
 			<li><kbd>;</kbd> <kbd>e</kbd> types é</li>
