--- a/release/k/korean_phonetic/source/welcome/welcome.htm
+++ b/release/k/korean_phonetic/source/welcome/welcome.htm
@@ -92,7 +92,7 @@
 	</div>
 	<div class="key plain" id="K_W">
 	<div class="keycap">w</div>
-	<div class="keytext">ᅭ</div>
+	<div class="keytext">ᅳ</div>
 	</div>
 	<div class="key plain" id="K_E">
 	<div class="keycap">e</div>
@@ -108,7 +108,7 @@
 	</div>
 	<div class="key plain" id="K_Y">
 	<div class="keycap">y</div>
-	<div class="keytext">ᅳ</div>
+	<div class="keytext">ㅐ</div>
 	</div>
 	<div class="key plain" id="K_U">
 	<div class="keycap">u</div>
@@ -156,7 +156,7 @@
 	</div>
 	<div class="key plain" id="K_F">
 	<div class="keycap">f</div>
-	<div class="keytext">ㅐ</div>
+	<div class="keytext">ᅣ</div>
 	</div>
 	<div class="key plain" id="K_G">
 	<div class="keycap">g</div>
@@ -176,7 +176,7 @@
 	</div>
 	<div class="key plain" id="K_L">
 	<div class="keycap">l</div>
-	<div class="keytext">ᅣ</div>
+	<div class="keytext">ᅭ</div>
 	</div>
 	<div class="key plain" id="K_COLON">
 	<div class="keycap">;</div>
@@ -347,7 +347,7 @@
 				<td class='lang2' style='font-size:24pt'>ᅡ</td><td><span class='keys'>a</span></td>
 			</tr>
 			<tr style='text-align:center'>
-				<td class='lang2' style='font-size:24pt'>ᅣ</td><td><span class='keys'>l</span></td>
+				<td class='lang2' style='font-size:24pt'>ᅣ</td><td><span class='keys'>f</span></td>
 			</tr>
 			<tr style='text-align:center'>
 				<td class='lang2' style='font-size:24pt'>ᅥ</td><td><span class='keys'>v</span></td>
@@ -359,7 +359,7 @@
 				<td class='lang2' style='font-size:24pt'>ᅩ</td><td><span class='keys'>o</span></td>
 			</tr>
 			<tr style='text-align:center'>
-				<td class='lang2' style='font-size:24pt'>ᅭ</td><td><span class='keys'>w</span></td>
+				<td class='lang2' style='font-size:24pt'>ᅭ</td><td><span class='keys'>l</span></td>
 			</tr>
 			<tr style='text-align:center'>
 				<td class='lang2' style='font-size:24pt'>ᅮ</td><td><span class='keys'>u</span></td>
@@ -368,16 +368,16 @@
 				<td class='lang2' style='font-size:24pt'>ᅲ</td><td><span class='keys'>x</span></td>
 			</tr>
 			<tr style='text-align:center'>
-				<td class='lang2' style='font-size:24pt'>ᅳ</td><td><span class='keys'>y</span></td>
+				<td class='lang2' style='font-size:24pt'>ᅳ</td><td><span class='keys'>w</span></td>
 			</tr>
 			<tr style='text-align:center'>
 				<td class='lang2' style='font-size:24pt'>ᅵ</td><td><span class='keys'>i</span></td>
 			</tr>
 			<tr style='text-align:center'>
-				<td class='lang2' style='font-size:24pt'>ᅢ</td><td><span class='keys'>f</span></td>
+				<td class='lang2' style='font-size:24pt'>ᅢ</td><td><span class='keys'>y</span></td>
 			</tr>
 			<tr style='text-align:center'>
-				<td class='lang2' style='font-size:24pt'>ᅤ</td><td><span class='keys'>F</span></td>
+				<td class='lang2' style='font-size:24pt'>ᅤ</td><td><span class='keys'>Y</span></td>
 			</tr>
 			<tr style='text-align:center'>
 				<td class='lang2' style='font-size:24pt'>ᅦ</td><td><span class='keys'>e</span></td>
@@ -389,7 +389,7 @@
 				<td class='lang2' style='font-size:24pt'>ᅪ</td><td><span class='keys'>o</span>+<span class='keys'>a</span></td>
 			</tr>		
 			<tr style='text-align:center'>
-				<td class='lang2' style='font-size:24pt'>ᅫ</td><td><span class='keys'>o</span>+<span class='keys'>e</span></td>
+				<td class='lang2' style='font-size:24pt'>ᅫ</td><td><span class='keys'>o</span>+<span class='keys'>y</span></td>
 			</tr>		
 			<tr style='text-align:center'>
 				<td class='lang2' style='font-size:24pt'>ᅬ</td><td><span class='keys'>o</span>+<span class='keys'>i</span></td>
@@ -404,7 +404,7 @@
 				<td class='lang2' style='font-size:24pt'>ᅱ</td><td><span class='keys'>u</span>+<span class='keys'>i</span></td>
 			</tr>
 			<tr style='text-align:center'>
-				<td class='lang2' style='font-size:24pt'>ᅴ</td><td><span class='keys'>y</span>+<span class='keys'>i</span></td>
+				<td class='lang2' style='font-size:24pt'>ᅴ</td><td><span class='keys'>w</span>+<span class='keys'>i</span></td>
 			</tr>	
 		</table>
 	</div>
