--- a/release/n/nias/source/welcome.htm
+++ b/release/n/nias/source/welcome.htm
@@ -13,6 +13,8 @@
 
 <h1>Welcome to Nias keyboard/Selamat menggunakan keyboard Nias</h1>
 
+<p>This is a basic keyboard with little modification to accomodate the Nias characters ö and ŵ.</p>
+
 <p>On PC: press together CTRL-RIGHT+o to produce ö and CTRL-RIGHT+w to produce ŵ. Add SHIFT to that to get the capital letters.</p>
 
 <p>On tablets/smartphones: ö and ŵ keys are already available on the keyboard.</p>
@@ -20,12 +22,6 @@
 <p>Di laptop/desktop: tekan bersama-sama tombol CTRL-KANAN+o untuk mengetik ö dan tombol CTRL-KANAN+w untuk menghasilkan ŵ. Tambahkan SHIFT ke kombinasi tsb. untuk mengetik huruf besar.</p>
 
 <p>Di tablet/smartphone: huruf ö dan ŵ telah tersedia di keyboard.</p>
-
-<h2>Links</h2>
-
-<p>Download: <a href="https://keyman.com/keyboards/nias">keyman.com/keyboards/nias</a></p>
-
-<p>Source code: <a href="https://github.com/sslaia/keyboards">https://github.com/sslaia/keyboards</a> (under release/n/nias)</p>
 
 <h2>Denah papan ketik di layar smartphone/hape</h2>
 <img src="phone.jpg"><br />
@@ -40,7 +36,7 @@
 <img src="ctrl-right-shift.jpg"><br />
 
 
-<p>© 2021 Sirus Laia</p>
+<p>© Sirus Laia</p>
 
 </body>
 </html>
