--- a/release/c/cypro_minoan/source/readme.htm
+++ b/release/c/cypro_minoan/source/readme.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Cypriot Minoan</title>
+  <title>Cypro-Minoan</title>
   <style type="text/css">
     p { font: 10pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
@@ -11,10 +11,10 @@
 </head>
 <body>
 
-<h1>Cypriot Minoan</h1>
+<h1>Cypro-Minoan</h1>
 
 <p>
-This keyboard is designed for the Cypriot Minoan. 
+This keyboard is designed for the Cypro-Minoan syllabary. 
 
 <p>© SIL Global</p>
 
