--- a/release/c/cypro_minoan/source/welcome/welcome.htm
+++ b/release/c/cypro_minoan/source/welcome/welcome.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Start Using Cypriot Minoan</title>
+  <title>Start Using Cypro-Minoan</title>
   <style type="text/css">
     p { font: 10pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
@@ -11,10 +11,10 @@
 </head>
 <body>
 
-<h1>Start Using Cypriot Minoan</h1>
+<h1>Start Using Cypro-Minoan</h1>
 
 <p>
-This keyboard is designed for the Cypriot Minoan.
+This keyboard is designed for the Cypro-Minoan syllabary.
 </p>
 
   <h2>Keyboard layout</h2>
@@ -22,6 +22,10 @@ This keyboard is designed for the Cypriot Minoan.
 	<p><a href="LayoutU_.png"><img class="keyboard" src="LayoutU_.png" alt="Default (unshifted) state" /></a></p>
 	<h3>Shift</h3>
 	<p><a href="LayoutU_S.png"><img class="keyboard" src="LayoutU_S.png" alt="Shift state" /></a></p>
+	<h3>Right ALT (unshifted)</h3>
+	<p><a href="LayoutU_RA.png"><img class="keyboard" src="LayoutU_RA.png" alt="Right ALT (unshifted) state" /></a></p>
+	<h3>Shift Right ALT</h3>
+	<p><a href="LayoutU_SRA.png"><img class="keyboard" src="LayoutU_SRA.png" alt="Shift Right ALT state" /></a></p>
 
 <p>© SIL Global</p>
 
